# StyleSense

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TEST_PLAN.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.js.map  extension.ts
extension/test/: extension.test.ts  runTest.ts
extension/test/suite/: index.ts
lsp/: Cargo.toml  build.rs
lsp/src/: definitions.rs  lib.rs  main.rs  parser.rs  rules.rs
lsp/src/definitions/: types.rs
lsp/src/parser/: nodes.rs  tree.rs
lsp/tests/: test_nodes.rs
stylesense/: README.md  package-lock.json  package.json
stylesense/src/: extension.ts
test-code/: simple.cpp  test-file.cpp
